[test] check permission in category test