@@ -5,8 +5,10 @@ import com.example.board.domain.role.TeamRole;
 import com.example.board.domain.team.Team;
 import com.example.board.domain.team.TeamCategory;
 import com.example.board.domain.teamMember.TeamMember;
+import com.example.board.domain.teamMember.TeamMemberRepository;
 import com.example.board.dto.category.CategoryRolePermissionDTO;
 import com.example.board.dto.category.CreateCategoryRequest;
+import com.example.board.dto.role.AddMembersToRoleRequest;
 import com.example.board.dto.role.CreateRoleRequest;
 import com.example.board.dto.team.AddMemberRequestDTO;
 import com.example.board.dto.team.TeamCreateRequestDTO;
@@ -15,13 +17,11 @@ import com.example.board.service.CategoryService;
 import com.example.board.service.MemberService;
 import com.example.board.service.TeamRoleService;
 import com.example.board.service.TeamService;
+import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
 
-import java.util.Arrays;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Set;
+import java.util.*;
 
 import static com.example.board.permission.TeamPermission.*;
 import static com.example.board.permission.TeamPermission.VIEW_POST;
@@ -32,11 +32,11 @@ public class TestDataBuilder {
     private final TeamService teamService;
     private final TeamRoleService teamRoleService;
     private final CategoryService categoryService;
+    private final TeamMemberRepository teamMemberRepository;
 
     public Team createTeam(Member member1){
         var request = new TeamCreateRequestDTO("testTeam", "test");
         Team team = teamService.createTeam(member1, request);
-
         return  team;
     }
 
@@ -54,9 +54,17 @@ public class TestDataBuilder {
         return teamRoleService.createRole(team.getId(), roleRequest);
     }
 
-    public TeamCategory createCategory(TeamRole teamRole, Team team){
-        CategoryRolePermissionDTO rolePermissionDTO = new CategoryRolePermissionDTO(teamRole.getId(), "VIEW_POST");
-        CreateCategoryRequest categoryRequest = new CreateCategoryRequest("testCategory", "create category test", List.of(rolePermissionDTO));
+    public void addMemberToRole(Member member, TeamRole teamRole){
+        var addRequest = new AddMembersToRoleRequest(teamRole.getId(), Collections.singletonList(member.getMemberId()));
+        teamRoleService.addMemberToRole(teamRole.getTeam().getId(), addRequest);
+    }
+
+    public TeamCategory createCategory(TeamRole teamRole, Team team, Member admin){
+        TeamMember adminMember = teamMemberRepository.findByTeamAndMember(team, admin).orElseThrow(()-> new EntityNotFoundException("teamMember not found"));
+        CategoryRolePermissionDTO dto1 = new CategoryRolePermissionDTO(teamRole.getId(), new HashSet<>(Arrays.asList(VIEW_POST, DELETE_POST)));
+        //admin 권한 추가
+        CategoryRolePermissionDTO dto2 = new CategoryRolePermissionDTO(adminMember.getRole().getId(), new HashSet<>(Arrays.asList(VIEW_POST, DELETE_POST, CREATE_POST, CREATE_COMMENT, EDIT_POST, DELETE_COMMENT)));
+        CreateCategoryRequest categoryRequest = new CreateCategoryRequest("testCategory", "create category test", List.of(dto1, dto2));
         return categoryService.createCategory(team.getId(), categoryRequest);
     }
 
